--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <body>
     <a href="index.html">
       <div class="a-hitler">
-        <img src="/assets/images/hitler.jpeg" alt="" style="height: 600px;" />
+        <img src="assets/images/hitler.jpeg" alt="" style="height: 600px;" />
       </div>
     </a>
   </body>
