--- a/about2.html
+++ b/about2.html
@@ -7,8 +7,8 @@
     <title>SILVSETER STALLONE</title>
 </head>
 <body>
-    <a href="/index.html"><div class="silv">
-        <img src="/assets/images/Silvester Stallone.jpg" alt="" style="height: 500px;">
+    <a href="index.html"><div class="silv">
+        <img src="assets/images/Silvester Stallone.jpg" alt="" style="height: 500px;">
     </div></a>
 </body>
 </html>
